--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Petti</string>
     <string name="title_activity_main">Home</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Produtos</string>
+    <string name="title_dashboard">Serviços</string>
     <string name="title_notifications">Notifications</string>
 </resources>
