--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_activity_store">StoreActivity</string>
+    <string name="action_settings">Settings</string>
+    
+    <string name="lbl_destaques">Destaques</string>
+    <string name="lbl_produtos">Produtos</string>
 </resources>
